--- a/public/index.html
+++ b/public/index.html
@@ -6,23 +6,14 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Moralis site created using create-react-app"
-    />
+    <meta name="description" content="NFT comic site" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="%PUBLIC_URL%/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="%PUBLIC_URL%/favicon-16x16.png"
+      href="%PUBLIC_URL%/32.png"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <!--
@@ -34,7 +25,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <title>ethereum-boilerplate</title>
+    <title>Infinite Comics</title>
   </head>
   <!-- Start Single Page Apps for GitHub Pages -->
   <script type="text/javascript">
@@ -66,8 +57,11 @@
     })(window.location);
   </script>
   <!-- End Single Page Apps for GitHub Pages -->
-  <body>
+  <body style="margin: none">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div
+      id="root"
+      style="height: 100%; flex-direction: column; display: flex"
+    ></div>
   </body>
 </html>
